test/errors/fill1.rcasm
    add
    dfs "foo", 0